unpackaged/main/default/objects/simplesms__PhoneNumber__c/simplesms__PhoneNumber__c.object-meta.xml
<CustomObject>
    <description>A phone number that can be used to send or receive SMS messages.  These records should not be added or removed directly.  They will be managed via the Simple SMS api.</description>
    <label>Phone Number</label>
    <nameField>
        <displayFormat>PhoneNumber-{0000}</displayFormat>
        <label>Phone Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>