unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__After_Hour_Auto_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__After_Hour_Auto_Response_Message__c</fullName>
    <description>The message is for the after hour Auto Response.</description>
    <inlineHelpText>The message is for the after hour Auto Response.</inlineHelpText>
    <label>After Hour Auto Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>