unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Allow_Media__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Allow_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Media</label>
    <type>Checkbox</type>
</CustomField>