unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Available_for_Campaign__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Available_for_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This phone number can be used with a Campaign.</description>
    <inlineHelpText>This phone number can be used with a Campaign.</inlineHelpText>
    <label>Available for Campaign</label>
    <type>Checkbox</type>
</CustomField>