unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Business_Hour_Id__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Business_Hour_Id__c</fullName>
    <description>Storing Business Hour Id to get Day&#39;s available times for handling After Hour Auto Response functionality.</description>
    <label>Business Hour Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>