unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Country_Phone_Prefix__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Country_Phone_Prefix__c</fullName>
    <label>Country Phone Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>