unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Display_Name__c</fullName>
    <description>A descriptive name for the phone number.</description>
    <inlineHelpText>A descriptive name for the phone number.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>