unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Help_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Help_Message__c</fullName>
    <description>The message that will be returned to the sender when they text HELP or INFO to this number.</description>
    <inlineHelpText>The message that will be returned to the sender when they text HELP or INFO to this number.</inlineHelpText>
    <label>Help Message</label>
    <type>TextArea</type>
</CustomField>