unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Help_Message_Length__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Help_Message_Length__c</fullName>
    <description>The number of characters in the Help Message.  Keep this message under 160 characters.</description>
    <formula>LEN( simplesms__Help_Message__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of characters in the Help Message.  Keep this message under 160 characters.</inlineHelpText>
    <label>Help Message Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>