unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__IsActive__c.field-meta.xml
<CustomField>
    <fullName>simplesms__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This phone number is available for use.</description>
    <inlineHelpText>This phone number is available for use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>