unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>simplesms__PhoneNumber__c</fullName>
    <description>The phone number.</description>
    <inlineHelpText>The phone number.</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>