unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Routing_Owner__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Routing_Owner__c</fullName>
    <externalId>true</externalId>
    <label>Routing Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>