unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Sid__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Sid__c</fullName>
    <description>A unique identifier for this phone number.</description>
    <inlineHelpText>A unique identifier for this phone number.</inlineHelpText>
    <label>Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>