unpackaged/main/default/objects/simplesms__PhoneNumber__c/fields/simplesms__Stop_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Stop_Message__c</fullName>
    <description>The message that will be returned to the sender when they text STOP, END, QUIT, CANCEL, or UNSUBSCRIBE to this number.</description>
    <inlineHelpText>The message that will be returned to the sender when they text STOP, END, QUIT, CANCEL, or UNSUBSCRIBE to this number.</inlineHelpText>
    <label>Stop Message</label>
    <type>TextArea</type>
</CustomField>