unpackaged/main/default/objects/simplesms__PhoneNumber__c/listViews/simplesms__All.listView-meta.xml
<ListView>
    <fullName>simplesms__All</fullName>
    <columns>NAME</columns>
    <columns>simplesms__Display_Name__c</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__PhoneNumber__c</columns>
    <columns>simplesms__Available_for_Campaign__c</columns>
    <columns>simplesms__Stop_Message__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>simplesms__Routing_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>